fixed initial flicker

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,38 +1,5 @@
-.site_logo {
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 24px;
-  line-height: 100px;
-  text-transform: lowercase;
-  color: #8d785b;
-}
-
-.navbar {
-  position: fixed;
-  width: 100%;
-  height: 100px;
-  padding: 0 40px;
-  display: flex;
-  justify-content: space-between;
-  font-family: Arial, Arial, Helvetica, sans-serif !important;
-  line-height: 100px;
-  color: #8d785b;
-}
-
-.site_info {
-  text-transform: uppercase;
-}
-
-.site_menu {
-  display: flex;
-}
-
-.menu_item {
-  margin-left: 60px;
-}
-
 .projects {
+  visibility: hidden;
   position: absolute;
   left: 0;
   bottom: 0;
@@ -52,30 +19,4 @@
   align-items: center;
   background: #202217;
   /* font-family: 'Mak'; */
-}
-
-.wrapper_img {
-  overflow: hidden;
-  position: absolute;
-  top: 35% !important;
-  right: 18%;
-  width: 30%;
-  height: 90vh;
-}
-
-.hero_img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.box {
-  background-color: #202217;
-  opacity: 1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 0;
 }
