--- a/components/Circles.module.css
+++ b/components/Circles.module.css
@@ -1,4 +1,5 @@
 .circle_shape {
+  visibility: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -10,6 +11,7 @@
 }
 
 .circle_shape_2 {
+  visibility: hidden;
   position: absolute;
   top: 30%;
   left: 20%;
@@ -22,6 +24,7 @@
 }
 
 .circle_shape_3 {
+  visibility: hidden;
   position: absolute;
   top: 64%;
   left: 80%;
